# blastcompare

./: .gitignore  LICENSE  NOTICE  README.md  getPairs.sh  get_diff.py  pyproject.toml  requirements.txt  runProt.sh  runblast.sh
lib/: calculate_cons_for_clustal_protein.py
misc/: cleanmissing.sh  combi.sh  dedup.sh  dedup2.sh  faidx.sh  geterr.sh  getfasta.ps1  getfastaIN.ps1  getreal.sh  movecombi.sh
src/: __main__.py  calculate_cons_for_clustal_protein.py  render.py
