[project]
name = "blastcompare"
version = "0.0.1-pre"
description = "comparing amino acids between pre-aligned seqenes"
authors = [
    {name = "Andrew Robbins", email = "ard114@case.edu"},
]
dependencies = [
    "biopython>=1.75",
    "scikit-bio-parasail>=0.0.2",
    "plac>=1.3.5",
]
requires-python = ">=3.8,<3.11"
license = {text = "Apache-2.0"}

[project.urls]
homepage = ""

[project.optional-dependencies]
[tool]
package-dir = "src"
[tool.pdm]
allow_prereleases = true
[tool.pdm.dev-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
