[project]
name = "blastcompare"
version = "0.0.1-pre"
description = "comparing amino acids between pre-aligned seqenes"
authors = [
    {name = "Andrew Robbins", email = "ard114@case.edu"},
]
dependencies = [
    "biopython>=1.75",
    "scikit-bio-parasail>=0.0.3",
    "plac>=1.3.5",
    "seaborn>=0.11.2"]
requires-python = ">=3.9,<3.11"
license = {text = "Apache-2.0"}

[project.urls]
homepage = ""
[project.optional-dependencies]
[tool]
package-dir = "src"
[tool.pdm]
allow_prereleases = false
[tool.pdm.dev-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
